fix: add overflow protection

--- a/web/src/css/components/_chat.scss
+++ b/web/src/css/components/_chat.scss
@@ -105,6 +105,7 @@
         border: 0.2rem solid lightgrey;
         flex-grow: 9999;
         margin-right: 1rem;
+        overflow-x: hidden;
         
         &__container {
             display: flex;
