--- a/web/src/css/main.css
+++ b/web/src/css/main.css
@@ -180,6 +180,7 @@ html {
   border: 0.2rem solid lightgrey;
   flex-grow: 9999;
   margin-right: 1rem;
+  overflow-x: hidden;
 }
 .chat__outbox__container {
   display: flex;
